--- a/assets/css/lostsummertime.css
+++ b/assets/css/lostsummertime.css
@@ -1,1 +1,17 @@
-/*  */
+@charset "utf-8";
+
+/*
+*
+* - - - - - - -
+*
+* Lang: ru_RU
+* Команда Lost Summer Time - vk.com/lost.summer.time
+* Главный в команде NiktoX2 - vk.com/niktox2
+* Версия - ***
+* Дата - ***
+*
+* - - - - - - -
+* Root
+* - - - - - - -
+*
+*/
